--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
   color: #5200ff;
 }
 
-.btn-light{
+.btn-light {
   height: 45px;
   padding: 0 45px;
   display: flex;
@@ -111,9 +111,6 @@ body {
   height: 100vh;
 }
 
-.register-main h3{
-
-}
 
 .register-main form {
   padding: 15px 25px;
@@ -145,7 +142,55 @@ body {
   color: #9A9A9A;
 }
 
-.register-main p a{
+.register-main p a {
   text-decoration: none;
   color: #000;
+}
+
+
+
+/******************* OTP VERİFY PAGE ************************/
+.otp-main {
+  display: flex;
+  height: 100vh;
+}
+
+.otp-content {
+  padding: 65px 25px;
+}
+
+.otp-content .otp-inputs {
+  display: flex;
+  justify-content: space-evenly;
+  margin-top: 70px;
+}
+
+.otp-content form input {
+  width: 50px;
+  height: 50px;
+  border-radius: 10px;
+  box-shadow: 0 0 10px #5100ff1a;
+}
+
+.otp-error-bottom {
+  background: linear-gradient(white, white) padding-box,
+    linear-gradient(to bottom, #c93333, #fff) border-box;
+    border: 1px solid transparent;
+}
+
+.otp-error-top {
+  background: linear-gradient(white, white) padding-box,
+    linear-gradient(to top, #c93333, #fff) border-box;
+    border: 1px solid transparent;
+}
+
+.otp-without-error{
+  border: none;
+}
+
+.otp-content .otp-submit {
+  position: absolute;
+  left: 50%;
+  bottom: 70px;
+  transform: translateX(-50%);
 }
