--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+/*---------- Basic elements ----------*/
+
 @import url("https://fonts.googleapis.com/css2?family=Unbounded:wght@200..900&display=swap");
 
 body {
@@ -15,7 +17,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  box-shadow: 0 0 15px #5200FF26;
+  box-shadow: 0 0 15px #5200ff26;
   border-radius: 8px;
   color: #5200ff;
   border: none;
@@ -28,81 +30,68 @@ body {
 /*---------- Main Top ----------*/
 .main-top {
   margin-top: 52px;
-  padding: 55px 140px 140px;
+  padding: 55px 120px 140px;
   display: inline-block;
   justify-content: space-between;
   align-items: center;
 }
 
 .main-logo {
-  width: 29px;
-  height: 29px;
-  margin-right: 6px;
-}
-
-.main-djeen {
-  width: 60px;
-  height: 30px;
+  width: 100%;
+  height: 5vh;
 }
 
 .main-top p {
-  font-size: 12px;
+  font-size: 16px;
   font-weight: 400;
   line-height: 11px;
   text-align: center;
 }
 
-
 /*---------- Main Content ----------*/
 
-.main-content h2 {
-  padding: 0 13px;
-  font-size: 27px;
-  font-weight: 400;
-  margin-bottom: 13px;
+.login-main {
+  display: flex;
+  align-items: center;
+  height: 100vh;
 }
 
-.main-content p {
-  font-size: 8px;
-  font-weight: 400;
-  text-align: center;
+.login-main form {
+  padding: 15px 25px;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
 }
 
-.form-input,
-.form-buttom {
-  font-size: 16px;
-}
-
-.form-group {
-  position: relative;
+.login-main form .input-container {
+  background-color: #fff;
+  padding: 15px 15px;
+  border-radius: 15px;
+  width: 100%;
   margin-bottom: 10px;
 }
 
-.form-label {
-  position: absolute;
-  top: 0;
-  z-index: -1;
+.login-main form .input-container label {
   color: #9a9a9a;
-  transition: 0.3s;
+  font-size: 14px;
 }
 
-.form-input {
-  padding: 0 0 0 10px;
+.login-main form .input-container input {
+  width: 100%;
   border: none;
-  transition: 0.3s;
+  outline: none;
 }
 
-.form-buttom {
-  padding: 10px 20px;
-  border: none;
-  font-size: 8px;
-  font-weight: 600;
-  background-color: #fff;
-  color: #5200ff;
-  border-radius: 6px;
+.login-main p {
+  color: #9a9a9a;
+  margin-bottom: 50px;
+  text-align: center;
 }
 
-
+.login-main p a {
+  text-decoration: none;
+  color: #000;
+}
 
 /***************** REGISTER PAGE ******************/
 .register-main {
@@ -110,7 +99,6 @@ body {
   align-items: center;
   height: 100vh;
 }
-
 
 .register-main form {
   padding: 15px 25px;
@@ -128,7 +116,7 @@ body {
 }
 
 .register-main form .input-container label {
-  color: #9A9A9A;
+  color: #9a9a9a;
   font-size: 14px;
 }
 
@@ -139,15 +127,13 @@ body {
 }
 
 .register-main p {
-  color: #9A9A9A;
+  color: #9a9a9a;
 }
 
 .register-main p a {
   text-decoration: none;
   color: #000;
 }
-
-
 
 /******************* OTP VERİFY PAGE ************************/
 .otp-main {
@@ -175,16 +161,16 @@ body {
 .otp-error-bottom {
   background: linear-gradient(white, white) padding-box,
     linear-gradient(to bottom, #c93333, #fff) border-box;
-    border: 1px solid transparent;
+  border: 1px solid transparent;
 }
 
 .otp-error-top {
   background: linear-gradient(white, white) padding-box,
     linear-gradient(to top, #c93333, #fff) border-box;
-    border: 1px solid transparent;
+  border: 1px solid transparent;
 }
 
-.otp-without-error{
+.otp-without-error {
   border: none;
 }
 
@@ -193,4 +179,119 @@ body {
   left: 50%;
   bottom: 70px;
   transform: translateX(-50%);
+}
+
+/*---------- Product Detail ----------*/
+
+.product-detail {
+  display: flex;
+  height: 100vh;
+}
+
+/*---------- Product Image ----------*/
+
+.product-image {
+  padding: 25px 15px 10px;
+}
+.product-image img {
+  width: 100%;
+}
+
+/*---------- Product Signs ----------*/
+
+.sign-element {
+  display: flex;
+  align-items: center;
+  font-size: 20px;
+  background: #fff;
+  border-radius: 32px;
+  margin-right: 10px;
+  margin-bottom: 5px;
+}
+
+.sign-element img {
+  width: 10px;
+  height: 10px;
+}
+
+.image-element {
+  padding: 5px;
+}
+
+.detail-sings {
+  font-size: 10px;
+  font-weight: 300;
+  color: #7b7b7b;
+}
+
+.product-info p {
+  margin-top: 0;
+}
+
+.product-head {
+  display: flex;
+  align-items: center;
+  margin-bottom: 0;
+  position: relative;
+}
+
+.product-head h2 {
+  font-size: 20px;
+}
+
+.product-head span {
+  margin: 0 5px;
+}
+
+.under {
+  color: #929292;
+}
+
+.blue {
+  width: 68px;
+  height: 18px;
+  font-size: 14px;
+  font-weight: 600;
+  padding: 3px;
+  text-align: center;
+  border-radius: 4px;
+  background-color: #5200ff;
+  color: #fff;
+}
+
+.blue img {
+  width: 12px;
+  height: 15px;
+  position: absolute;
+  top: 37%;
+  left: 84%;
+  margin-left: 8px;
+}
+
+/*---------- Product Form Input ----------*/
+
+.product-detail form {
+  padding: 15px 25px;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+.product-detail form .input-container {
+  width: 100%;
+  margin-bottom: 10px;
+  padding: 15px 15px 0;
+  border-radius: 15px;
+  background-color: #fff;
+}
+
+.product-detail form .input-container label {
+  font-size: 14px;
+  color: #9a9a9a;
+}
+
+.product-detail form .input-container input {
+  width: 100%;
+  border: none;
+  outline: none;
 }
