--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,9 @@
 /*---------- Basic elements ----------*/
 
 @import url("https://fonts.googleapis.com/css2?family=Unbounded:wght@200..900&display=swap");
+*{
+  font-family: "Unbounded", sans-serif;
+}
 
 body {
   font-family: "Unbounded", sans-serif;
@@ -9,6 +12,14 @@ body {
 
 .primary-color {
   color: #5200ff;
+}
+
+.btn-success{
+  border-radius: 15px;
+  background: #04B700;
+  padding: 15px 35px;
+  border: none;
+  color: #fff;
 }
 
 .btn-light {
@@ -181,103 +192,114 @@ body {
   transform: translateX(-50%);
 }
 
-/*---------- Product Detail ----------*/
-
-.product-detail {
-  display: flex;
-  height: 100vh;
-}
-
-/*---------- Product Image ----------*/
-
-.product-image {
-  padding: 25px 15px 10px;
-}
-.product-image img {
+/************************ PRODUCT PAGE ******************/
+.swiper {
   width: 100%;
+  height: 350px;
+  margin-bottom: 20px;
+  border-radius: 12px;
 }
+
+.swiper-slide {
+  background: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.swiper-slide img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+
 
 /*---------- Product Signs ----------*/
-.product-signs{
+.product-detail .product-signs {
   display: flex;
+  justify-content: space-between;
+  margin-bottom: 10px;
 }
-.sign-element {
+
+.product-detail .sign-element {
   display: flex;
+  gap: 8px;
   align-items: center;
-  font-size: 20px;
   background: #fff;
   border-radius: 32px;
-  margin-right: 10px;
-  margin-bottom: 5px;
+  height: 30px;
+  padding: 0 15px;
 }
 
-.product-stars{
-  display: inline-flex;
-}
-
-.sign-element img {
+.product-detail .sign-element img {
   width: 10px;
   height: 10px;
 }
 
-.image-element {
-  padding: 5px;
-}
-
-.detail-sings {
-  font-size: 10px;
+.product-detail .sign-element span {
+  font-size: 3.5vw;
   font-weight: 300;
   color: #7b7b7b;
 }
 
-.product-info p {
-  margin-top: 0;
+.product-detail .sign-element .product-stars {
+  display: inline-flex;
 }
 
-.product-head {
+
+.product-detail .product-info .product-head {
   display: flex;
+  width: 90%;
   align-items: center;
+  justify-content: space-between;
   margin-bottom: 0;
   position: relative;
 }
 
-.product-head h2 {
+.product-detail .product-info .product-head .product-head h2 {
   font-size: 20px;
 }
 
-.product-head span {
-  margin: 0 5px;
-}
-
-.under {
-  color: #929292;
-}
-
-.blue {
-  width: 68px;
-  height: 18px;
+.product-detail .product-info .product-head .price {
+  display: flex;
+  gap: 5px;
   font-size: 14px;
-  font-weight: 600;
-  padding: 3px;
-  text-align: center;
+}
+
+.product-detail .product-info .product-head .price .old-price {
+  color: #4B4B4B;
+  ;
+}
+
+.product-detail .product-info .discount {
+  width: 60px;
+  height: 18px;
+  font-size: 15px;
+  font-weight: 500;
+  padding: 3px 4px;
   border-radius: 4px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   background-color: #5200ff;
   color: #fff;
 }
 
-.blue img {
+.product-detail .product-info .discount img {
   width: 12px;
-  height: 15px;
-  position: absolute;
-  top: 37%;
-  left: 84%;
-  margin-left: 8px;
+  height: 80%;
 }
 
 /*---------- Product Form Input ----------*/
 
+.product-detail p {
+  text-align: justify;
+}
+
 .product-detail form {
-  padding: 15px 25px;
+  padding: 15px 0;
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
@@ -286,18 +308,48 @@ body {
 .product-detail form .input-container {
   width: 100%;
   margin-bottom: 10px;
-  padding: 15px 15px 0;
   border-radius: 15px;
   background-color: #fff;
 }
 
-.product-detail form .input-container label {
-  font-size: 14px;
-  color: #9a9a9a;
+.product-detail form .print-img {
+  width: 100%;
+  border: 2px dotted #4B4B4B;
+  border-radius: 15px;
+  height: fit-content;
+  outline: none;
+  background-color: #fff;
+  padding: 12px;
 }
 
-.product-detail form .input-container input {
-  width: 100%;
+
+
+.product-detail form .print-img label{
+  color: #B0B0B0;
+  font-size: 14px;
+}
+
+
+.product-detail form .input-container textarea {
+  border-radius: 15px;
+  width: 90%;
   border: none;
   outline: none;
+  padding: 12px;
+  color: #000;
+}
+
+.product-detail form .input-container textarea::placeholder{
+  color: #B0B0B0;
+  font-size: 14px;
+}
+
+.product-detail form .input-container select {
+  width: 100%;
+  border-radius: 15px;
+  border: none;
+  outline: none;
+  padding: 12px;
+  color: #B0B0B0;
+  font-size: 14px;
 }
