--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Unbounded:wght@200..900&display=swap");
+
 * {
   font-family: "Unbounded", sans-serif;
 }
@@ -211,9 +212,10 @@ body {
   object-fit: cover;
 }
 
-.product-detail{
+.product-detail {
   max-height: 100vh;
   padding: 10px;
+  margin-bottom: 180px;
 }
 
 .product-detail .product-signs {
@@ -346,6 +348,113 @@ body {
   font-size: 14px;
 }
 
+.product-detail .modal-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 999;
+}
+
+.product-detail .modal-content {
+  background-color: #fff;
+  padding: 20px;
+  border-radius: 5px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+  width: 75%;
+  position: relative;
+}
+
+.product-detail .modal-content img {
+  height: 80px;
+  width: 80px;
+  position: absolute;
+  top: -15px;
+  right: -15px;
+}
+
+.product-detail .modal-content h2 {
+  color: #FF5C00;
+}
+
+.product-detail .modal-content h2 span {
+  font-weight: 300;
+}
+
+
+.product-detail .modal-button {
+  display: block;
+  width: 100%;
+  padding: 10px;
+  margin-top: 10px;
+  text-align: center;
+  background: #04B700;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.product-detail .success-modal-container {
+  display: none;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 999;
+}
+
+.product-detail .success-modal-container .modal-content {
+  background-color: #fff;
+  padding: 20px;
+  border-radius: 15px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+  width: 75%;
+  position: relative;
+}
+
+.product-detail .success-modal-container .modal-content img {
+  height: 80px;
+  width: 80px;
+  position: absolute;
+  top: -20px;
+  right: -20px;
+}
+
+.product-detail .success-modal-container .modal-content h2 {
+  color: #04B700;
+
+}
+
+.product-detail .success-modal-container .modal-content h2 span {
+  font-weight: 300;
+}
+
+
+.product-detail .success-modal-container .modal-content .modal-button {
+  display: block;
+  width: 93%;
+  padding: 10px;
+  margin-top: 10px;
+  text-align: center;
+  background: #04B700;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+
+
 /*---------- Menu ----------*/
 
 .menu {
@@ -362,12 +471,12 @@ body {
   border-radius: 6px 6px 0 0;
 }
 
-.menu .menu-item{
+.menu .menu-item {
   width: 20vw;
   text-align: center;
 }
 
-.menu .menu-item p{
+.menu .menu-item p {
   margin-top: -2px;
 }
 
@@ -376,6 +485,6 @@ body {
   height: 24px;
 }
 
-.menu .menu-name{
+.menu .menu-name {
   font-size: 12px;
 }
