--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -461,7 +461,7 @@ body {
   position: fixed;
   bottom: 0;
   left: 0;
-  width: 100vw;
+  width: 90% !important;
   display: flex;
   justify-content: space-between !important;
   text-align: center;
@@ -469,6 +469,7 @@ body {
   padding: 10px 20px;
   box-shadow: 0 -1px 6px rgba(176, 176, 176, 0.726);
   border-radius: 6px 6px 0 0;
+  z-index: 9999;
 }
 
 .menu .menu-item {
@@ -487,4 +488,167 @@ body {
 
 .menu .menu-name {
   font-size: 12px;
+}
+
+
+.home-main{
+  padding: 15px 10px;
+}
+
+.home-main .fixed-section{
+  width: 100%;
+  top: 15px;
+}
+
+.home-main .header{
+  display: flex;
+  justify-content: space-between;
+}
+
+.home-main .header a{
+  text-decoration: none;
+}
+
+.home-main .header .logo img,
+.home-main .header .icons img{
+  height: 45px;
+}
+
+.home-main .search {
+  display: flex;
+  padding: 0 10px;
+  justify-content: space-between;
+  align-items: center;
+  height: 50px;
+  background-color: #fff;
+  border-radius: 10px;
+  margin: 15px 0;
+}
+
+.home-main .search img{
+  height: 40px;
+}
+
+.home-main .search input{
+  border: none;
+  outline: none;
+  height: 50px;
+  width: 80%;
+}
+
+.home-main .ads{
+  width: 100%;
+}
+
+.home-main .ads img{
+  width: 100%;
+}
+
+
+.home-main .discovery{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  row-gap: 12px;
+}
+
+.home-main .discovery .product-card{
+  width: 48%;
+  border-radius: 15px;
+  background-color: #fff;
+  box-shadow: 2px 2px 7px rgba(128, 128, 128, 0.455);
+}
+
+.home-main .discovery .product-card .product-image{
+  position: relative;
+  
+}
+
+.home-main .discovery .product-card img{
+  width: 100%;
+  border-radius: 15px 15px 0 0;
+}
+
+.home-main .discovery .product-card .fav{
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  background-color: #fff;
+  height: 35px;
+  width: 35px;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.home-main .discovery .product-card .fav img{
+  width: 95%;
+}
+
+.home-main .discovery .product-card .product-title{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  padding: 0 5px;
+}
+
+.home-main .discovery .product-card .product-title h5{
+  font-size: 3vw;
+}
+
+.home-main .discovery .product-card .product-title .stars{
+  display: inline-flex;
+  justify-content: space-around;
+  width: 40%;
+  margin-right: 10px;
+}
+
+.home-main .discovery .product-card .product-title .stars img{
+  width: 10px;
+}
+
+.home-main .discovery .product-card .product-desc{
+  font-size: 10px;
+  color: gray;
+  padding: 0 7px;
+}
+
+.home-main .discovery .product-card .product-price{
+  display: flex;
+  justify-content: left;
+  align-items: center;
+  font-size: 10px;
+  padding: 0 7px;
+  gap: 7px;
+}
+
+.home-main .discovery .product-card .product-price .old-price{
+  color: #7c7c7c;
+  text-decoration: line-through;
+}
+
+.home-main .discovery .product-card .product-price .percent{
+  padding: 3px 4px;
+  background-color: #5200ff;
+  color: #fff;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  gap: 3px;
+  border-radius: 5px;
+}
+
+.home-main .discovery .product-card .order-btn{
+  background-color: #04B700;
+  color: #fff;
+  font-size: 10px;
+  width: 100%;
+  margin-top: 10px;
+  display: flex;
+  height: 20px;
+  justify-content: center;
+  align-items: center;
+  border-radius: 0 0 15px 15px;
 }
