--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -164,6 +164,7 @@ body {
   height: 50px;
   border-radius: 10px;
   box-shadow: 0 0 10px #5100ff1a;
+  text-align: center;
 }
 
 .otp-error-bottom {
